2010-08-02 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-gtk-utils.c (nact_gtk_utils_get_pixbuf):
	* src/nact/nact-iaction-tab.c (on_icon_changed):
	Fix bad reinitialization of the icon item.

	* doc/nact/C/figures/nact-basenames-tab.png:
	* doc/nact/C/figures/nact-capabilities-tab.png:
	* doc/nact/C/figures/nact-command-tab.png:
	* doc/nact/C/figures/nact-environment-tab.png:
	* doc/nact/C/figures/nact-execution-tab.png:
	* doc/nact/C/figures/nact-folders-tab.png:
	* doc/nact/C/figures/nact-legend.png:
	* doc/nact/C/figures/nact-main-empty.png:
	* doc/nact/C/figures/nact-mimetypes-tab.png:
	* doc/nact/C/figures/nact-new-capability.png:
	* doc/nact/C/figures/nact-preferences-export.png:
	* doc/nact/C/figures/nact-preferences-import.png:
	* doc/nact/C/figures/nact-preferences-io-providers.png:
	* doc/nact/C/figures/nact-preferences-runtime.png:
	* doc/nact/C/figures/nact-preferences-schemes.png:
	* doc/nact/C/figures/nact-preferences-ui.png:
	* doc/nact/C/figures/nact-properties-tab.png:
	* doc/nact/C/figures/nact-schemes-tab.png:
	Update all screenshots to include window decoration.

	* doc/nact/nautilus-actions-config-tool.omf.in:
	Change categorie and type of the NACT user's manual.

	* src/nact/nact-main-menubar.c:
	Change help menu item from Gtk default to Gnome (apparent) standard.

	* src/nact/nact-main-menubar-help.c (nact_main_menubar_help_on_help):
	Connect to Yelp.

	* configure.ac: Update comments.

	* src/nact/nact-add-capability-dialog.c (try_for_send_ok):
	* src/nact/nact-add-scheme-dialog.c (try_for_send_ok):
	* src/nact/nact-main-tab.c (nact_main_tab_is_page_enabled):
	Check that Gtk+ is more recent that 2.18 for gtk_widget_get_sensitive().

	Split the NACT manual by chapter.

	* doc/nact/C/nact-usage.xml:
	* doc/nact/C/nact-prefs.xml:
	* doc/nact/C/nact-misc.xml: New files.

	* doc/nact/C/nautilus-actions-config-tool.xml:
	* doc/nact/Makefile.am: Updated accordingly.

2010-08-01 Pierre Wieser <pwieser@trychlos.org>
