@@ -1,3 +1,8 @@
+2010-08-04 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/core/na-tokens.c (is_singular_exec):
+	Implement DES-EMA draft v 0.13 which defines irrelevant parameters.
+
 2010-08-02 Pierre Wieser <pwieser@trychlos.org>
 
 	* src/nact/nact-gtk-utils.c (nact_gtk_utils_get_pixbuf):
